Fix spacing between items
The logo and list items have been properly spaced between each other
and centered evenly both vertically and horizontally.

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -3,7 +3,7 @@
   background: papayawhip;
   display: flex;
   gap: 10px;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -20,6 +20,8 @@ ul {
   list-style-type: none;
   display: flex;
   gap: 10px;
+  padding: 0;
+  margin: 30px 10px;
 }
 
 a {
@@ -28,5 +30,4 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
-  display: flex;
 }
